New in 0.9.10:
--------------

* Type classes now implemented as dependent records, meaning that method
  types may now depend on earlier methods.
* Add '%reflection' option for functions, for compile-time operations on
  syntax.
* Add 'quoteGoal x by p in e' which makes x equal to p applied to the goal
  in the scope e
* Add !expr notation for implicit binding of intermediate results in 
  monadic/do/etc expressions
* Extend Effects package to cope with possibly failing operations, using
  "if_valid", "if_error", etc
* At the REPL, "it" now refers to the previous expression
* Semantic colouring at the REPL. Turn this off with --nocolour.
* Some prettifying of error message
* The contents of ~/.idris/repl/init are run at REPL start-up.
* The REPL stores a command history in ~/.idris/repl/history
* The [a..b], [a,b..c], [a..], and [a,b..] syntax now pass the totality
  checker and can thus be used in types. The [x..] syntax now returns an
  actually infinite stream.

Internal changes

* New module/dependency tree checking
* New parser implementation with more precise errors
* Improved type class resolution
* Compiling Nat via GMP integers
* Performance improvements in elaboration
* Various REPL commands to support interactive editing, and a client/server
  mode to allow external invocation of REPL commands.

New in 0.9.9:
-------------

* Apply functions by return type, rather than with arguments:
  "t <== f" means "apply f with arguments such that it returns a value
  of type t"
* Allow the result type of a rewrite to be specified
* Allow names to be attached to provisional definitions
  lhs ?= {name} rhs -- generates a lemma called 'name' which makes the
  types of the lhs and rhs match. {name} is optional - a unique name is
  generated if it is absent.
* Experimental LLVM backend
* Added Data.HVect module
* Fix fromInteger to take an Integer, rather than an Int
* Integer literals for Fin
* Renamed O to Z, and fO to fZ