@@ -1,2 +1,3 @@
 <<int fn>>
 6
+reg027a.idr:9:10:Overlapping instance: Show (Int -> a) already defined
